--- a/Restaurants.API/appsettings.Development.json
+++ b/Restaurants.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RestaurantsDb": "Server=(localdb)\\MSSQLLocalDB;Database=RestaurantsDb;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
